# fluidsynth-hello-world-android-improved

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myappinc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  my_main_lib.c  my_main_lib.cpp  native-lib.cpp
app/src/main/java/com/example/myappinc/: MainActivity.java  Notes.java  Synthesizer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myappinc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
